# kinect_msgs

./: CMakeLists.txt  package.xml
msg/: BodyArray.msg
